--- a/GrpcServer/GrpcServer.csproj
+++ b/GrpcServer/GrpcServer.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\message.proto" GrpcServices="Server" />
   </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
